--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400&family=Open+Sans&family=Poppins:wght@400;500&display=swap');
 
+:root {
+  --color-shadow: hsl(220, 5%, 12%);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -39,7 +43,7 @@ body {
   margin-top: 1.5em;
   padding: 0.625em 1em 0.625em 0.5em;
   border-radius: 1em;
-  box-shadow: 1px 1px 3px #1c1d1f;
+  box-shadow: 1px 1px 3px var(--color-shadow);
   width: clamp(13.5em, 70vw, 30em);
 }
 
@@ -50,4 +54,70 @@ body {
 .search img {
   width: 1em;
   height: 1em;
+}
+
+.books-container {
+  margin-top: 2em;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.book {
+  display: flex;
+  flex-direction: column;
+  width: 13em;
+  height: 25em;
+  border-radius: 0.6em;
+  box-shadow: 1px 1px 5px var(--color-shadow);
+  margin: 2em 0 0 1em;
+}
+
+.book .img-container {
+  height: 80%;
+}
+
+.book img {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.6em;
+  transition: 0.6s ease-in-out;
+}
+
+.book:hover img {
+  opacity: 0.3;
+  transition: 0.4s ease-out;
+}
+
+.book .info {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: flex-start;
+  text-align: center;
+  transition: 0.3s linear;
+  height: 20%;
+}
+
+.book:hover .info {
+  transform: translateY(-13em);
+  transition: 0.4s ease-out;
+}
+
+.book .info .hidden {
+  opacity: 0;
+  padding-left: 0.5em;
+  text-align: left;
+  transition: 0.3s ease;
+}
+
+.book:hover .info .hidden {
+  opacity: 1;
+}
+
+.hidden p {
+  margin: 0.5em;
 }
