--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,10 @@ body {
 
 .search input {
   border: none;
+  outline: none;
+  font-family: Lato, sans-serif;
+  width: 100%;
+  margin-right: 0.5em;
 }
 
 .search img {
